Sorted spacing on contact-footer, styled by class to avoid application to future footers on the site

--- a/portfolio-styling.css
+++ b/portfolio-styling.css
@@ -114,17 +114,6 @@ iframe {
 	height: 400px;
 }
 
-footer {
-	margin: 0 auto;
-	padding: 5px 0 10px 0;
-	width: 30%;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	border-radius: 100px;
-}
-
-
 /* Styling for custom classes ============================== */
 
 section.about-section, article.about-content {
@@ -146,6 +135,16 @@ header.portfolio-site-header {
 	align-items: baseline;
 	position: sticky; /* keep element where it is without removing from document flow */
 	top: 0; /* set a distance from the top to stick to - 0 means always stay at the top */
+}
+
+footer.contact-footer {
+	width: 100%;
+	margin: 0 auto;
+	padding: 5px 0 10px 0;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	border-radius: 100px;
 }
 
 nav.portfolio-site-nav {
